[project]
name = "tickflow"
version = "0.1.19"
description = "TickFlow Python Client"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TickFlow Team"}
]
keywords = ["finance", "stock", "market-data", "trading", "api-client"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# DataFrame support
pandas = ["pandas>=1.5.0"]
# Progress bar for batch operations
progress = ["tqdm>=4.60.0"]
# Real-time WebSocket streaming
realtime = [
    "websockets>=13.0",
]
# All optional features
all = [
    "pandas>=1.5.0",
    "tqdm>=4.60.0",
    "websockets>=13.0",
]

[project.urls]
Documentation = "https://docs.tickflow.org"
Repository = "https://github.com/tickflow-org/tickflow"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tickflow*"]

[dependency-groups]
dev = [
    "datamodel-code-generator[http]>=0.45.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
